--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@iconify/react": "^4.1.1",
     "@react-hookz/web": "^23.1.0",
     "@react-pdf/renderer": "^3.1.14",
     "@tailwindcss/typography": "^0.5.10",
