--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-facebook": "^9.0.12",
     "react-google-recaptcha": "^3.1.0",
     "react-html2pdf": "^1.0.1",
     "react-icons": "^4.12.0",
