--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dropzone": "^14.2.3",
     "react-facebook": "^9.0.12",
     "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.49.2",
     "react-html2pdf": "^1.0.1",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
@@ -47,7 +48,8 @@
     "rect": "^1.2.1",
     "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
-    "sonner": "^1.2.4"
+    "sonner": "^1.2.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
