--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
+    "@headlessui/react": "^0.0.0-insiders.01a34cb",
     "@iconify/react": "^4.1.1",
     "@react-hookz/web": "^23.1.0",
     "@react-pdf/renderer": "^3.1.14",
