--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@headlessui/react": "^0.0.0-insiders.01a34cb",
     "@iconify/react": "^4.1.1",
     "@react-hookz/web": "^23.1.0",
@@ -31,7 +32,7 @@
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-aria": "^3.30.0",
-    "react-bootstrap": "^2.9.1",
+    "react-bootstrap": "^2.9.2",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -42,7 +43,7 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-native-modal": "^13.0.1",
-    "react-pdf": "^7.5.1",
+    "react-pdf": "^7.6.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "rect": "^1.2.1",
